--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -132,6 +132,20 @@
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/empty_here" />
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/not_found_logo"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/not_found" />
+
         <TextView
             android:id="@+id/empty_text"
             android:layout_width="wrap_content"
