--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
+            android:fontFamily="@font/inter_semi_bold"
             android:lineSpacingMultiplier="1.9"
             android:padding="15dp"
             android:text="@string/about_app_information"
